--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "twitter-weather-spark-pipeline"
+name = "weather-spark-pipeline"
 version = "0.1.0"
 description = ""
 authors = ["Cecil <cecil.ash@karbonhq.com>"]
@@ -12,7 +12,6 @@ pyspark = "^3.4.0"
 requests = "^2.31.0"
 pandas = "^2.0.1"
 python-twitter = "^3.5"
-tweepy = "^4.14.0"
 python-dotenv = "^1.0.0"
 matplotlib = "^3.7.1"
 ipykernel = "^6.23.1"
